# gaussian_rep

./: .gitignore  README.md  develop.py  entry_point.py  environment.yml  pyproject.toml  specification.py  utils.py
src/gaussian_rep/: __init__.py  develop.py  entry_point.py  params.pkl  post_processing.py  specification.py  utils.py
tests/: test_procedure.py  test_specification.py  test_utils.py
